--- a/source/languages/campaign-url-builder-ru_RU.po
+++ b/source/languages/campaign-url-builder-ru_RU.po
@@ -1052,9 +1052,9 @@ msgid "https://wordpress.org/plugins/campaign-url-builder"
 msgstr "https://wordpress.org/plugins/campaign-url-builder"
 
 #. Author of the plugin
-msgid "Alex Zappa a.k.a. re[at]lat"
-msgstr "Alex Zappa a.k.a. re[at]lat"
+msgid "Alex Zappa"
+msgstr "Alex Zappa"
 
 #. Author URI of the plugin
-msgid "https://reatlat.net"
-msgstr "https://reatlat.net/ru"
+msgid "https://alex.zappa.dev"
+msgstr "https://alex.zappa.dev"
