--- a/source/languages/campaign-url-builder.pot
+++ b/source/languages/campaign-url-builder.pot
@@ -998,9 +998,9 @@ msgid "https://wordpress.org/plugins/campaign-url-builder"
 msgstr ""
 
 #. Author of the plugin
-msgid "Alex Zappa a.k.a. re[at]lat"
+msgid "Alex Zappa"
 msgstr ""
 
 #. Author URI of the plugin
-msgid "https://reatlat.net"
+msgid "https://alex.zappa.dev"
 msgstr ""
